# radbase

./: .gitignore  .pre-commit-config.yaml  References.xlsx  absolute_radii.csv  compare_to_angeli.py  correlations.csv  isotope_indices.csv  load_measurements.py  main.py  measurements.csv  pyproject.toml  readme.md  readme.rst  references.csv  relative_radii.csv  setup.py  solve_groups.py
.github/workflows/: python-package-testing.yml
REM/: absolute_radii_rem.csv  group_info_rem.csv  relative_radii_rem.csv
absonly/: absolute_radii_absonly.csv  group_info_absonly.csv  relative_radii_absonly.csv
all/: absolute_radii_all.csv  group_info_all.csv  relative_radii_all.csv
comparisons/: angeli_abs_abs.xlsx
docs/: inputs.rst  versions.rst
docs/source/: conf.py  conversion.rst  index.rst  versions.rst
noniso/: absolute_radii_noniso.csv  group_info_noniso.csv  relative_radii_noniso.csv
noniso_relonly/: group_info_noniso_relonly.csv  relative_radii_noniso_relonly.csv
radbase/: __init__.py  build_references.py  compare_to_angeli.py  converter.py  data_entry.py  database.py  interactor.py  load_measurements.py  main.py  radius_analyzer.py  references.csv  references.py  solve.py  timings
radbase/compilation/: charge_distributions.json  references.json
radbase/compilation/bergem_nuclear_1988/: Muonic Barrett Moment.json  Muonic Radius.json  Muonic Transition Energy.json  notes.txt
radbase/compilation/frosch_electron_1968/: Charge Distribution.json  Electron Scattering Cross Section Ratio.json  Electron Scattering Cross Section.json  Radius.json  cross_sections.csv  cross_sections_a.csv  cross_sections_b.csv  cross_sections_c.csv  frosch_1968_process.py  notes.txt
radbase/compilation/hahn_experimental_1979/: energies.txt  (+5 more)
radbase/startup/: build_references.py  compare_to_angeli.py  load_measurements.py  load_results.py
relonly/: absolute_radii_relonly.csv  group_info_relonly.csv  relative_radii_relonly.csv
tests/: test_converter.py  test_data_entry.py  test_groups.py  test_radius_analyzer.py
(+185 files in other folders)
