[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radbase"
version = "0.1"
authors = [
  { name="Hunter Staiger", email="staigerh1@gmail.com" },
]
description = "Analysis of nuclear radius data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hstaige/radbase"