[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radbase"
version = "0.1"
dependencies = [
    "lmfit>=1.3.2",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.2.0",
    "numdifftools>=0.9.2"
]
authors = [
  { name="Hunter Staiger", email="staigerh1@gmail.com" },
]
description = "Analysis of nuclear radius data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com//hstaige//radbase"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["radbase"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.coverage.run]
omit = [
    "radbase/startup/*/",
    "radbase/angeli_comparison.py",
    "radbase/solve.py",
    "radbase/main.py"
]

[tool.pytest.ini_options]
addopts = "--cov=radbase --cov-report=xml"

[tool.flake8]
ignore = [
    # Line being too long
    "E501"
]
exclude = [
    "docs",
    "build",
    ".github",
    ".git",
    "radbase/startup/*",
    "radbase/main.py"
]
